# fp-neural-net

./: LICENSE  README.md  main.py  mypy.ini  pyproject.toml  requirements.txt  setup.py
data/: TCC_data.csv  biodiesel_data.csv  butanol_data.csv  training_data.csv
data/experimental/: training_data.csv  training_data_extended.csv
data/literature/: faee_data.csv
models/: 2c1f7c79-64dc-4b75-a7df-f89f7de46e33.keras  2d0cd94a-09de-4f6d-9052-412dc5492fb4.keras  2d24f594-d8a1-404b-bbd0-7c47f9bc630c.keras  300f1c39-939c-4692-b86f-512a283db3bf.keras  597dd95e-0502-4d67-bc78-7f29c549e32f.keras  62105265-a869-44eb-89ee-20227d798254.keras  7221de46-ae84-4cf7-993f-b8f79cc47eaf.keras  77129f04-c83c-4fd7-bc77-bdc107ed4d90.keras  7741df64-4918-45ca-a652-08d54c894507.keras  7d317f10-fb59-42a6-a2c6-f2e1f9164072.keras  87ff08bb-11b9-4a12-8e27-295071c20943.keras  99169106-b5dd-446c-9fcc-edb9f6be0796.keras  9c9d42b3-d114-46ac-8e18-4922c8dad362.keras  9e39ae85-bdfa-41d6-bd12-818b52dfb7d4.keras  b6a8b6ee-06ae-4537-897f-4c87650ff1fb.keras  ba6cc9f5-4bad-4964-879a-6ccea3802aaf.keras  da1455ca-d517-4407-9947-f0b03cb70eb0.keras  ebfdd51b-5650-4590-a6f7-3a9da9547e88.keras  f001de23-1f4f-4dc2-8f98-5edc19974556.keras  fb48fa00-e542-43f5-9a17-909061444329.keras  fitted_nn.keras  fitted_scaler.pkl  scaler_2c1f7c79-64dc-4b75-a7df-f89f7de46e33.pkl  scaler_2d0cd94a-09de-4f6d-9052-412dc5492fb4.pkl  scaler_300f1c39-939c-4692-b86f-512a283db3bf.pkl  scaler_597dd95e-0502-4d67-bc78-7f29c549e32f.pkl  scaler_7221de46-ae84-4cf7-993f-b8f79cc47eaf.pkl  scaler_7741df64-4918-45ca-a652-08d54c894507.pkl  scaler_87ff08bb-11b9-4a12-8e27-295071c20943.pkl  scaler_99169106-b5dd-446c-9fcc-edb9f6be0796.pkl  scaler_9c9d42b3-d114-46ac-8e18-4922c8dad362.pkl  scaler_9e39ae85-bdfa-41d6-bd12-818b52dfb7d4.pkl  scaler_ba6cc9f5-4bad-4964-879a-6ccea3802aaf.pkl  scaler_da1455ca-d517-4407-9947-f0b03cb70eb0.pkl  scaler_ebfdd51b-5650-4590-a6f7-3a9da9547e88.pkl  scaler_f001de23-1f4f-4dc2-8f98-5edc19974556.pkl  scaler_fb48fa00-e542-43f5-9a17-909061444329.pkl
notebooks/: eda_systems.ipynb  fp_modelling.ipynb
src/: model_evaluation.py  model_training.py
src/fpnn/: model_training.py  path_resources.py
