[build-system]
requires = ["setuptools >= 65.5"]
build-backend = "setuptools.build_meta"

[project]
name = "fpnn"
version = "1.0"
dependencies = [
    "matplotlib==3.9.2",
    "numpy==1.24.3",
    "pandas==2.2.2",
    "scikit-learn==1.5.0",
    "seaborn==0.13.2",
    "tensorflow==2.13.1"
]
requires-python = ">3.10"
authors = [
    {name = "Mauricio Souza", email = "m241948@dac.unicamp.br"}
]
description = "This project consists in the use of feed forward neural networks to predict the flash point of biofuels"
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["neural networks", "flash point", "property prediction"]
classifiers = [
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[project.optional-dependencies]
dev = ["black"]

[project.urls]
Repository = "https://github.com/ThermoPhase-FCSRG/fp-neural-net"